# tech-scout

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.claude/: settings.json
.claude/agents/: tech-scout-analyzer.md  tech-scout-scanner.md
.claude/commands/: tech-scout-deep.md  tech-scout-doctor.md  tech-scout-list.md  tech-scout-resume.md  tech-scout-show.md  tech-scout.md
.claude/skills/tech-scout/: SKILL.md
.claude/skills/tech-scout/reference/: candidate-format.md  output-templates-guide.md  phase-0-preparation.md  phase-1-context.md  phase-2-discovery.md  phase-3-filtering.md  phase-4-analysis.md  phase-5-packaging.md  phase-6-quality-check.md  sources-catalog.md
.github/workflows/: ci.yml
docs/: architecture.md  cli-contract.md  code-standards.md  customization.md  extending.md  faq.md  observability.md  usage.md
scripts/: _common.py  ts_audit_show.py  ts_doctor.py  ts_list_history.py  ts_load_candidates.py  ts_locale_info.py  ts_render_doc.py  ts_save_candidates.py  ts_scan_codebase.py  ts_setup_run.py  ts_validate_package.py
src/tech_scout/: __init__.py  __main__.py
src/tech_scout/cli/: __init__.py  _common.py  audit_show.py  doctor.py  list_history.py  load_candidates.py  locale_info.py  render_doc.py  save_candidates.py  scan_codebase.py  setup_run.py  validate_package.py
src/tech_scout/codebase/: __init__.py  architecture_summary.py  scanner.py  stack_detector.py
src/tech_scout/codebase/manifest_readers/: __init__.py  _base.py  dotnet.py  go.py  java.py  node.py  python.py  rust.py
src/tech_scout/config/: __init__.py  logging.py  settings.py
src/tech_scout/domain/: __init__.py  enums.py  error_codes.py  exceptions.py  models.py  value_objects.py
src/tech_scout/history/: __init__.py  deduplication.py  repository.py
src/tech_scout/locales/: __init__.py  en.py  registry.py  spec.py  tr.py
src/tech_scout/observability/: __init__.py  audit_log.py  correlation.py
src/tech_scout/output/: __init__.py  package_writer.py  renderer.py  slug.py  template_assets.py  validator.py
src/tech_scout/state/: __init__.py  migrations.py  schemas.py  store.py
src/tech_scout/templates/en/: 01-detailed-analysis.md.j2  05-slack-summary.md.j2
src/tech_scout/templates/tr/: 00-yonetici-ozeti.md.j2  03-hizli-referans.md.j2  06-kaynaklar.md.j2
src/tech_scout/utils/: __init__.py  atomic_io.py  file_lock.py  path_safety.py  time.py  toml_compat.py
templates/en/: 00-executive-summary.md.j2  02-presentation.md.j2  03-quick-reference.md.j2  04-diagrams.md.j2  06-sources.md.j2  README.md.j2
templates/tr/: 01-detayli-analiz.md.j2  02-sunum.md.j2  04-gorsel-diyagramlar.md.j2  05-slack-ozeti.md.j2  README.md.j2
tests/: conftest.py
tests/fixtures/sample_codebases/go_service/: go.mod
tests/fixtures/sample_codebases/nextjs_app/: package.json
tests/fixtures/sample_codebases/python_fastapi/: README.md  pyproject.toml
tests/integration/: test_helper_scripts.py
tests/unit/: test_atomic_io.py  test_file_lock.py  test_settings.py  test_utils.py
tests/unit/cli/: test_audit_show.py  test_common.py  test_doctor.py
tests/unit/codebase/: test_manifest_readers.py  test_scanner.py
tests/unit/domain/: test_error_codes.py  test_models.py  test_value_objects.py
tests/unit/history/: test_deduplication.py  test_repository.py
tests/unit/locales/: test_registry.py
tests/unit/observability/: test_audit_log.py  test_correlation.py
tests/unit/output/: test_package_writer.py  test_renderer.py  test_slug.py  test_template_assets.py  test_validator.py
tests/unit/state/: test_migrations.py  test_store.py
